@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2005-07-30 backend_svg.py: embed png image files in svg rather than linking
+           to a separate png file, fixes bug #1245306 (thanks to Norbert Nemec 
+           for the patch) - SC
 
 2005-07-27 Applied SF patch 1242648: minor rounding error in
            IndexDateFormatter in dates.py
